syntax = "proto3";

package evm.v1.result;

enum HaltReasonEnum {
    HALT_REASON_ENUM_UNSPECIFIED = 0;
    OUT_OF_GAS_BASIC = 1;
    OUT_OF_GAS_MEMORY_LIMIT = 2;
    OUT_OF_GAS_MEMORY = 3;
    OUT_OF_GAS_PRECOMPILE = 4;
    OUT_OF_GAS_INVALID_OPERAND = 5;
    OUT_OF_GAS_REENTRANCY_SENTRY = 6;
    OPCODE_NOT_FOUND = 7;
    INVALID_FE_OPCODE = 8;
    INVALID_JUMP = 9;
    NOT_ACTIVATED = 10;
    STACK_UNDERFLOW = 11;
    STACK_OVERFLOW = 12;
    OUT_OF_OFFSET = 13;
    CREATE_COLLISION = 14;
    PRECOMPILE_ERROR = 15;
    NONCE_OVERFLOW = 16;
    CREATE_CONTRACT_SIZE_LIMIT = 17;
    CREATE_CONTRACT_STARTING_WITH_EF = 18;
    CREATE_INIT_CODE_SIZE_LIMIT = 19;
    OVERFLOW_PAYMENT = 20;
    STATE_CHANGE_DURING_STATIC_CALL = 21;
    CALL_NOT_ALLOWED_INSIDE_STATIC = 22;
    OUT_OF_FUNDS = 23;
    CALL_TOO_DEEP = 24;
    EOF_FUNCTION_STACK_OVERFLOW = 25;
    INVALID_EXTCALL_TARGET = 26;
    EOF_AUX_DATA_OVERFLOW = 27;
    EOF_AUX_DATA_TOO_SMALL = 28;
}

enum SuccessReasonEnum {
    SUCCESS_REASON_ENUM_UNSPECIFIED = 0;
    STOP = 1;
    RETURN = 2;
    SELF_DESTRUCT = 3;
    EOF_RETURN_CONTRACT = 4;
}

message Topic {
    repeated bytes value = 1;
}

message LogData {
    repeated Topic topics = 1;
    repeated bytes data = 2;
}

message Log {
    repeated bytes address = 1;
    LogData data = 2;
}

message Success {
    SuccessReasonEnum reason = 1;
    uint64 gas_used = 2;
    uint64 gas_refunded = 3;
    repeated Log logs = 4;
    repeated bytes output = 5;
    repeated bytes deployed_address = 6;
}

message Revert {
    uint64 gas_used = 1;
    repeated bytes output = 2;
}

message Halt {
    HaltReasonEnum reason = 1;
    uint64 gas_used = 2;
}

message Error {
    string message = 1;
}

message EvmResult {
    oneof result {
        Success success = 1;
        Revert revert = 2;
        Halt halt = 3;
        Error error = 4;
    }
}